Fix BXEGS-662 "Additional Details value does not wrap to the next line when maximum characters are used"

--- a/web-app/css/main.css
+++ b/web-app/css/main.css
@@ -956,6 +956,11 @@ button.closebtn {
     padding-bottom: 0.25em;
 }
 
+.addtl-details-detail.ethn-race-wrapper {
+    float: none;
+    word-wrap: break-word;
+}
+
 .item-wrapper,
 .emergency-contact-wrapper {
     float: left;
